Fixed homepage on smaller desktop screens

--- a/frontend/src/Layout/Home/Home.scss
+++ b/frontend/src/Layout/Home/Home.scss
@@ -33,20 +33,21 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-
-  .title {
-    color: #291911;
-    font-size: 2rem;
-    font-family: "Abyssinica SIL";
+  .text {
     text-align: center;
-    margin-top: 20px;
-  }
-
-  .desc {
-    color: #9d918b;
-    font-size: 16px;
-    text-align: center;
-    margin-top: 10px;
+    .title {
+      color: #291911;
+      font-size: 2rem;
+      font-family: "Abyssinica SIL";
+      text-align: center;
+      margin-top: 20px;
+    }
+    .desc {
+      color: #9d918b;
+      font-size: 16px;
+      text-align: center;
+      margin-top: 10px;
+    }
   }
 
   .bookshelf {
@@ -71,54 +72,46 @@ body {
 /* Desktop */
 @media screen and (min-width: 1094px) {
   .round-corner {
-    display: flex;
-    flex-direction: row;
     width: 80%;
     margin: auto;
     background-color: #f7f3ee;
     border-radius: 20px;
     box-shadow: 15px 15px 50px #78787833;
+    padding-bottom: 5rem;
     .book-icon {
       width: 120px;
-      padding: 20px;
+      align-self: flex-start;
+      margin: 3rem;
     }
-
-    .text {
-      .title {
-        color: #291911;
-        margin-top: 200px;
-        // margin-left: 100px;
-        font-size: 4rem;
-        font-family: "Abyssinica SIL";
+    .content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      .text {
+        .title {
+          color: #291911;
+          font-size: 4rem;
+          font-family: "Abyssinica SIL";
+        }
+        .desc {
+          color: #9d918b;
+          font-size: 20px;
+          margin-top: -20px;
+        }
       }
-      .desc {
-        // margin-left: 100px;
-        color: #9d918b;
-        font-size: 20px;
-        margin-top: -20px;
-      }
-    }
+      .bookshelf {
+        .book-image {
+          width: 200px;
+          height: 300px;
+          box-shadow: 0px 0px 10px 0px #5d5c5c;
+          margin-right: 3rem;
+        }
 
-    .bookshelf {
-      // width: 100%;
-      // height: 100px;
-      // display: flex;
-      // justify-content: center;
-      // align-items: flex-end;
-      // padding: 7rem;
-      // margin-top: -80px;
-      .book-image {
-        width: 200px;
-        // margin: 40px;
-        box-shadow: 0px 0px 10px 0px #5d5c5c;
-      }
-
-      .another-image {
-        width: 200px;
-        height: 300px;
-        // border-radius: 10px;
-        // margin-top: 10px;
-        // padding: 4rem;
+        .another-image {
+          width: 150px;
+          padding-bottom: 2rem;
+        }
       }
     }
   }
